# CortexMesh

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: __init__.py  run_benchmark.py
docs/: ARCHITECTURE.md  EVALUATION.md  ROADMAP.md
examples/: _common.py  custom_text_dataset.py  inspect_memory.py  memory_demo.py  rule_demo.py  save_and_reload.py  text_demo.py
src/cortexmesh/: __init__.py  baselines.py  config.py  data.py  demo.py  evaluation.py  experimental.py  inference.py  inspection.py  model.py  modules.py  train_text.py  trainer.py
tests/: test_baselines.py  test_benchmark_smoke.py  test_cortexmesh.py  test_curriculum.py  test_evaluation.py  test_examples_extended.py  test_experimental.py  test_inspection.py  test_persistence.py  test_public_api.py  test_text_corpus.py  test_train_text_cli.py  test_trainer_metrics.py
