[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexmesh"
version = "0.1.0"
description = "Experimental non-transformer AI architecture with routing and external memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
]

[project.scripts]
cortexmesh-demo = "cortexmesh.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
